<resources>
    <string name="app_name">GiG</string>
    <string name="band_name">Band Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="upload_settings">Upload photo</string>
    <string name="hello">Sample Android Design Support Library App</string>

    <string name="floating_labels">Floating Labels</string>
    <string name="fab">Floating Action Button</string>
    <string name="snackbar">Snackbar</string>

    <string name="about_label">About</string>
    <string name="genres_label">Genres</string>
    <string name="music_label">Music</string>
    <string name="gig_label">GiGs</string>
    <string name="media_label">Media</string>
    <string name="photo_label">Photos</string>

    <string name="tabs">Tabs</string>
    <string name="coordinator">Coordinator Layout</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>
