<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

<!--        <item
            android:id="@+id/drawer_labels"
            android:title="@string/floating_labels"/>-->

        <item
            android:id="@+id/about_label"
            android:title="@string/about_label"/>

        <item
            android:id="@+id/genre_label"
            android:title="@string/genres_label"/>

        <item
            android:id="@+id/music_label"
            android:title="@string/music_label"/>

        <item
            android:id="@+id/gig_label"
            android:title="@string/gig_label"/>
        <item
            android:id="@+id/photo_label"
            android:title="@string/photo_label"/>
        <item
            android:id="@+id/media_label"
            android:title="@string/media_label"/>

<!--        <item
            android:id="@+id/drawer_fab"
            android:title="@string/fab"/>-->

<!--        <item
            android:id="@+id/drawer_snackbar"
            android:title="@string/snackbar"/>-->

<!--        <item
            android:id="@+id/drawer_coordinator"
            android:title="@string/coordinator"/>-->

    </group>

</menu>